Added triggers, new tables and database optimizations, general improvements
