# backend/api/message.go
@@ -4,11 +4,38 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// HttpMessageGet godoc
+// @Summary get a message
+// @Schemes get a message and it's content / other data
+// @Description deletes a message
+// @Tags Message API
+// @Accept json
+// @Produce json
+// @Success 200
+// @Router /message/id/:messageId [get]
 func HttpMessageGet(c *gin.Context) {
 }
 
-func HttpMessageCreateOrUpdate(c *gin.Context) {
+// HttpMessageDelete godoc
+// @Summary deletes a message
+// @Schemes
+// @Description deletes a message
+// @Tags Message API
+// @Accept json
+// @Produce json
+// @Success 200
+// @Router /message/id/:messageId [delete]
+func HttpMessageDelete(c *gin.Context) {
 }
 
-func HttpMessageDelete(c *gin.Context) {
+// HttpMessageSend godoc
+// @Summary send a message to a given room
+// @Schemes
+// @Description deletes a message
+// @Tags Message API, Room API
+// @Accept json
+// @Produce json
+// @Success 200
+// @Router /room/:roomId/message [post]
+func HttpMessageSend(c *gin.Context) {
 }
