# backend/http.go
@@ -5,7 +5,10 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"github.com/gorilla/websocket"
+	swaggerfiles "github.com/swaggo/files"
+	ginSwagger "github.com/swaggo/gin-swagger"
 	"github.com/tuckersn/chatbackend/api"
+	_ "github.com/tuckersn/chatbackend/docs"
 	docs "github.com/tuckersn/chatbackend/docs"
 )
 
@@ -35,30 +38,39 @@ func httpServer() {
 	{
 		pageRouter := apiRouter.Group("/page")
 		{
-			pageRouter.GET("/*path", api.HttpPageGet)
-			pageRouter.POST("/*path", api.HttpPagePost)
-			pageRouter.DELETE("/*path", api.HttpPageDelete)
+			pageRouter.GET("/*path", api.HttpNoteGet)
+			pageRouter.POST("/*path", api.HttpNotePost)
+			pageRouter.DELETE("/*path", api.HttpNoteDelete)
 		}
 		messageRouter := apiRouter.Group("/message")
 		{
-			messageRouter.GET("/*messageId", api.HttpMessageGet)
-			messageRouter.POST("/*messageId", api.HttpMessageCreateOrUpdate)
-			messageRouter.DELETE("/*messageId", api.HttpMessageDelete)
+			messageRouter.GET("/id/*messageId", api.HttpMessageGet)
+			messageRouter.POST("/id/*messageId", api.HttpMessageSend)
+			messageRouter.DELETE("/id/*messageId", api.HttpMessageDelete)
 		}
-		// userRouter := apiRouter.Group("/user")
-		// {
-		// 	userRouter.GET("/", api.HttpUserGet)
-		// 	userRouter.GET("/*userId", api.HttpUserGet)
-		// 	userRouter.POST("/", api.HttpUserCreate)
-		// 	userRouter.POST("/*userId", api.HttpUserUpdate)
-		// 	userRouter.GET("/*userId", api.HttpUserGet)
-		// 	userRouter.DELETE("/*userId", api.HttpUserDelete)
-		// }
+		userRouter := apiRouter.Group("/user")
+		{
+			userRouter.POST("/", api.HttpUserCreate)
+			userRouter.GET("/id/*userId", api.HttpUserGet)
+			userRouter.POST("/id/*userId", api.HttpUserUpdate)
+			userRouter.DELETE("/id/*userId", api.HttpUserDelete)
+		}
+		serverRouter := apiRouter.Group("/server")
+		{
+			serverRouter.GET("/ping", api.HttpPing)
+		}
+		webhookRouter := apiRouter.Group("/webhook")
+		{
+			webhookRouter.GET("/", api.HttpWebhookList)
+			webhookRouter.POST("/", api.HttpWebhookCreate)
+			webhookRouter.GET("/id/*webhookId", api.HttpWebhookGet)
+			webhookRouter.POST("/id/*webhookId", api.HttpWebhookUpdate)
+			webhookRouter.DELETE("/id/*webhookId", api.HttpWebhookDelete)
+		}
 	}
 
 	// api.SettingsRoutes(r)
-	// api.ServerRoutes(r)
 
-	// r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 	r.Run() // listen and serve on
 }
